CMake i make - nie działa assimp w CMake - nie do końca działa kompilowanie pod windowsa make

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
-yave
+Yave
 .vscode/*
 .vscode/settings.json
 *.o
 imgui.ini
 
 .vscode/c_cpp_properties.json
+CMakeFiles/
+cmake_install.cmake
+Makefile
+CMakeCache.txt
+libImgui.a
