Dzialajacy skrypt autokonfigurujacy na win10

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,33 @@
+#executables
 Yave
+Yave.exe
+libassimp-5.dll
+
+#vscode
 .vscode/*
 .vscode/settings.json
+.vscode/c_cpp_properties.json
+
+#precompiled objects
 *.o
 imgui.ini
+libYaveAll.a
 
-.vscode/c_cpp_properties.json
+#cmake
 CMakeFiles/
 cmake_install.cmake
 Makefile
 CMakeCache.txt
-libYaveAll.a
-glfw3.dll
-build/
+
+
+
+#additional
 additional/glad/src
-libassimp-5.dll
-Yave.exe
 additional/glad/libglad.a
+additional/windows/assimp
+additional/windows/cmake
+additional/windows/glad
+additional/windows/GLFW
+additional/windows/glm
+additional/windows/MinGW
+additional/windows/stb_image
