--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,10 @@ link_libraries(-lglad -lglfw -lGL -lm -lX11 -lpthread -lXrandr -lXi -ldl -lassim
 ENDIF()
 
 #select all files under lib/ and src/
+set(YAVE_MAIN_FILES "main/config.h" "main/config.cpp" "main/render.h" "main/render.cpp")
 file( GLOB_RECURSE LIB_SOURCES src/*.cpp )
 file( GLOB_RECURSE LIB_HEADERS lib/*.h )
-add_library( YaveAll ${LIB_SOURCES} ${LIB_HEADERS} )
+add_library( YaveAll ${LIB_SOURCES} ${LIB_HEADERS} ${YAVE_MAIN_FILES} "global.h")
 
 add_executable( Yave main.cpp )
 
