--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,10 @@ cmake_minimum_required(VERSION 2.8.12)
 project(YAVE)
 
 IF(WIN32)
-link_libraries(-lglfw3 -lopengl32 -lglu32 -lgdi32 -lglad -lassimp.dll)
+link_libraries(-lglfw3 -lopengl32 -lglu32 -lgdi32 -lglad -lassimp.dll -llua)
 ELSE()
-link_libraries(-lglad -lglfw -lGL -lm -lX11 -lpthread -lXrandr -lXi -ldl -lassimp -lIrrKlang)
+include_directories(/usr/include/lua5.3)
+link_libraries(-lglad -lglfw -lGL -lm -lX11 -lpthread -lXrandr -lXi -ldl -lassimp -lIrrKlang -llua5.3)
 ENDIF()
 
 #select all files under lib/ and src/
