Working on windows
- Dependencies updated

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,19 @@ imgui.ini
 libYaveAll.a
 
 #cmake
-CMakeFiles/
 [Bb][Uu][Ii][Ll][Dd]
 
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
 
 #additional
 additional/glad/src
