--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,8 @@ list(APPEND LIBS glad)
 list(APPEND LIBS assimp)
 list(APPEND LIBS YAAL)
 
+list(APPEND EXTRA_INCLUDE_DIRS .)
+list(APPEND EXTRA_INCLUDE_DIRS lib)
 list(APPEND EXTRA_INCLUDE_DIRS external/glfw/include)
 list(APPEND EXTRA_INCLUDE_DIRS external/glm)
 list(APPEND EXTRA_INCLUDE_DIRS external/glad)
@@ -110,8 +112,8 @@ IF(NOT WIN32)
 list(APPEND EXTRA_INCLUDE_DIRS external)
 ENDIF()
 
-target_include_directories( Yave PUBLIC ${EXTRA_INCLUDE_DIRS} ${VERSION_CONFIG_DIR})
-target_include_directories( YaveAll PUBLIC ${EXTRA_INCLUDE_DIRS} ${VERSION_CONFIG_DIR})
+target_include_directories( Yave PRIVATE ${EXTRA_INCLUDE_DIRS} ${VERSION_CONFIG_DIR})
+target_include_directories( YaveAll PRIVATE ${EXTRA_INCLUDE_DIRS} ${VERSION_CONFIG_DIR})
 
 target_link_libraries( YaveAll ${LIBS}) 
 target_link_libraries( Yave YaveAll) 
