--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ if (POLICY CMP0048)
   cmake_policy(SET CMP0048 NEW)
 endif (POLICY CMP0048)
 
-project(YAVE VERSION 1.0)
+project(YAVE VERSION 1.0.0)
 
 #compile options
 option(USE_DIRECT "use direct paths instead of relative - good for testing, bad for sharing" ON)
@@ -49,17 +49,26 @@ if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
     endif()
 endif()
 
-#add
-add_subdirectory(external/glfw)
-add_subdirectory(external/glm)
-add_subdirectory(external/glad/cmake)
-add_subdirectory(external/YAAL)
-
 # assimp options
 OPTION ( ASSIMP_INSTALL "" OFF )
 OPTION ( ASSIMP_WARNINGS_AS_ERRORS "" OFF )
 
+#add_submodules
+add_subdirectory(external/glfw)
+add_subdirectory(external/glm)
+add_subdirectory(external/glad/cmake)
 add_subdirectory(external/assimp)
+add_subdirectory(external/YAAL)
+
+#add to static library
+list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:glfw>)
+list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:glad>)
+list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:assimp>)
+list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:YAAL>)
+
+
+
+
 
 #install python requirements
 find_package(Python COMPONENTS Interpreter REQUIRED)
@@ -73,21 +82,17 @@ endif()
 
 execute_process(COMMAND ${Python_EXECUTABLE} -m pip install -r ${CMAKE_SOURCE_DIR}/external/glad/requirements.txt)
 
-
-
 #generate glad
 glad_add_library(glad API gl:core=4.0)
 
-set(YAVE_MAIN_FILES "main/config.h" "main/config.cpp" "main/render.h" "main/render.cpp")
+set(YAVE_API_HEADERS "API/yave.h")
+
+set(YAVE_MAIN_FILES "main/config.cpp" "main/render.cpp")
 file( GLOB_RECURSE LIB_SOURCES src/*.cpp )
 file( GLOB_RECURSE LIB_HEADERS lib/*.h )
-add_library( YaveAll ${LIB_SOURCES} ${LIB_HEADERS} ${YAVE_MAIN_FILES} "global.h")
 
-
-add_executable( Yave main.cpp )
-
-#end of main files
-
+# lets create our engine
+add_library( ${PROJECT_NAME} STATIC ${EXTERNAL_OBJECTS} ${LIB_SOURCES} ${LIB_HEADERS} ${YAVE_MAIN_FILES} ${YAVE_API_HEADERS} "yave_config.h")
 
 #add dependencies
 list(APPEND LIBS glfw)
@@ -97,7 +102,10 @@ list(APPEND LIBS assimp)
 list(APPEND LIBS YAAL)
 
 list(APPEND EXTRA_INCLUDE_DIRS .)
+list(APPEND EXTRA_INCLUDE_DIRS main)
+list(APPEND EXTRA_INCLUDE_DIRS API)
 list(APPEND EXTRA_INCLUDE_DIRS lib)
+list(APPEND EXTRA_INCLUDE_DIRS lib/imgui)
 list(APPEND EXTRA_INCLUDE_DIRS external/glfw/include)
 list(APPEND EXTRA_INCLUDE_DIRS external/glm)
 list(APPEND EXTRA_INCLUDE_DIRS external/glad)
@@ -112,9 +120,9 @@ IF(NOT WIN32)
 list(APPEND EXTRA_INCLUDE_DIRS external)
 ENDIF()
 
-target_include_directories( Yave PRIVATE ${EXTRA_INCLUDE_DIRS} ${VERSION_CONFIG_DIR})
-target_include_directories( YaveAll PRIVATE ${EXTRA_INCLUDE_DIRS} ${VERSION_CONFIG_DIR})
+target_include_directories( ${PROJECT_NAME} PUBLIC ${EXTRA_INCLUDE_DIRS} ${VERSION_CONFIG_DIR})
 
-target_link_libraries( YaveAll ${LIBS}) 
-target_link_libraries( Yave YaveAll) 
+target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBS})
 
+# Set the version property.
+set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
