Working library but...
- OpenAL still have issue: No audio support detected in PipeWire.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,10 @@ add_subdirectory(external/YAAL)
 list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:glfw>)
 list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:glad>)
 list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:assimp>)
+list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:zlibstatic>)
+list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:alcommon>)
+list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:alplay>)
+list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:OpenAL>)
 list(APPEND EXTERNAL_OBJECTS $<TARGET_OBJECTS:YAAL>)
 
 
